--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "cross-env NODE_ENV='development' react-scripts start",
+    "start": "cross-env NODE_ENV='production' react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
